--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -15,13 +15,13 @@ jobs:
         with:
           registry_username: ${{ secrets.DOCKER_LOGIN }}
           registry_password: ${{ secrets.DOCKER_TOKEN }}
-          registry_host: registry.relizahub.com
-          image_namespace: registry.relizahub.com/d94ef72b-5c1b-486e-9af9-dfd5740e93d8-private
+          registry_host: registry.test.relizahub.com
+          image_namespace: registry.test.relizahub.com/487604fa-22eb-4b89-8e43-f55db4bbcf6e-private
           image_name: rebom-backend
           rearm_api_id: ${{ secrets.REARM_API_ID }}
           rearm_api_key: ${{ secrets.REARM_API_KEY }}
           path: backend
-          rearm_component_id: 790444de-4a71-4189-b480-fc6895b99ddd
+          rearm_component_id: 00814c52-4045-416d-a6ec-286208b50e37
           enable_sbom: 'true'
   build-frontend:
     name: Build And Push Frontend
@@ -32,29 +32,12 @@ jobs:
         with:
           registry_username: ${{ secrets.DOCKER_LOGIN }}
           registry_password: ${{ secrets.DOCKER_TOKEN }}
-          registry_host: registry.relizahub.com
-          image_namespace: registry.relizahub.com/d94ef72b-5c1b-486e-9af9-dfd5740e93d8-private
+          registry_host: registry.test.relizahub.com
+          image_namespace: registry.test.relizahub.com/487604fa-22eb-4b89-8e43-f55db4bbcf6e-private
           image_name: rebom-frontend
           rearm_api_id: ${{ secrets.REARM_API_ID }}
           rearm_api_key: ${{ secrets.REARM_API_KEY }}
           path: frontend
-          rearm_component_id: 9c75a337-8639-4b78-a51a-bb36df9d0c86
+          rearm_component_id: d1fbd55f-1133-47e4-99dc-59fa46fbed7c
           enable_sbom: 'true'
-
-  build-helm:
-    name: Build And Push Helm Chart
-    runs-on: ubuntu-latest
-    steps:
-      - name: RelizaHub Build And Submit Release metadata action
-        uses: relizaio/rearm-helm-action@main
-        with:
-          registry_username: ${{ secrets.DOCKER_LOGIN }}
-          registry_password: ${{ secrets.DOCKER_TOKEN }}
-          registry_host: registry.relizahub.com/d94ef72b-5c1b-486e-9af9-dfd5740e93d8-private
-          helm_chart_name: rebom
-          rearm_api_id: ${{ secrets.REARM_API_ID }}
-          rearm_api_key: ${{ secrets.REARM_API_KEY }}
-          path: helm
-          rearm_component_id: ac29d4b6-5404-43c2-bf41-ccde8694a53f
-          enable_sbom: 'false'
 
