--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -42,4 +42,8 @@ jobs:
           enable_sbom: 'true'
           source_code_sbom_type: 'npm'
           enable_public_cosign_sigstore: 'true'
+          enable_shiftleftcyber: 'true'
+          shiftleftcyber_host: https://secure-sbom-api-prod-gateway-dhncnyq8.uc.gateway.dev
+          shiftleftcyber_key: ${{ secrets.ShiftLeftCyberApiKey }}
+          shiftleftcyber_pub_key_id: ${{ secrets.ShiftLeftCyberPubKeyId }}
 
