--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Build And Submit Release metadata to ReARM for Frontend
-        uses: relizaio/rearm-docker-action@f941cae7577a55838e8a583d3652b6917f3e89e4 # v1.6.0
+        uses: relizaio/rearm-docker-action@main # experimental
         with:
           rearm_api_url: https://dev.rearmhq.com
           registry_username: ${{ secrets.DOCKER_LOGIN }}
