--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -3,25 +3,25 @@ on: [push]
 name: Build Docker Image And Submit Metadata To Reliza Hub
 
 jobs:
-  build-backend:
-    name: Build And Push Backend
-    runs-on: ubuntu-latest
-    steps:
-      - name: Build And Submit Release metadata to ReARM for Backend
-        uses: relizaio/rearm-docker-action@f941cae7577a55838e8a583d3652b6917f3e89e4 # v1.6.0
-        with:
-          rearm_api_url: https://dev.rearmhq.com
-          registry_username: ${{ secrets.DOCKER_LOGIN }}
-          registry_password: ${{ secrets.DOCKER_TOKEN }}
-          registry_host: registry.test.relizahub.com
-          image_namespace: registry.test.relizahub.com/487604fa-22eb-4b89-8e43-f55db4bbcf6e-private
-          image_name: rebom-backend
-          rearm_api_id: ${{ secrets.REARM_API_ID }}
-          rearm_api_key: ${{ secrets.REARM_API_KEY }}
-          path: backend
-          rearm_component_id: 00814c52-4045-416d-a6ec-286208b50e37
-          enable_sbom: 'true'
-          source_code_sbom_type: 'npm'
+  # build-backend:
+  #   name: Build And Push Backend
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Build And Submit Release metadata to ReARM for Backend
+  #       uses: relizaio/rearm-docker-action@f941cae7577a55838e8a583d3652b6917f3e89e4 # v1.6.0
+  #       with:
+  #         rearm_api_url: https://dev.rearmhq.com
+  #         registry_username: ${{ secrets.DOCKER_LOGIN }}
+  #         registry_password: ${{ secrets.DOCKER_TOKEN }}
+  #         registry_host: registry.test.relizahub.com
+  #         image_namespace: registry.test.relizahub.com/487604fa-22eb-4b89-8e43-f55db4bbcf6e-private
+  #         image_name: rebom-backend
+  #         rearm_api_id: ${{ secrets.REARM_API_ID }}
+  #         rearm_api_key: ${{ secrets.REARM_API_KEY }}
+  #         path: backend
+  #         rearm_component_id: 00814c52-4045-416d-a6ec-286208b50e37
+  #         enable_sbom: 'true'
+  #         source_code_sbom_type: 'npm'
   build-frontend:
     permissions:
       id-token: write
